[package]
name = "rollback_mlua"
version = "0.1.0"
edition = "2021"
license = "MIT"
build = "build/main.rs"

[dependencies]
bstr = "0.2.17"
log = "0.4.17"
num-traits = "0.2.15"
once_cell = "1.13.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
generational-arena = "0.2.8"

[build-dependencies]
cc = { version = "1.0" }
pkg-config = { version = "0.3.17" }
lua-src = { version = ">= 544.0.0, < 550.0.0", optional = true }

[features]
lua54 = []
lua53 = []
lua52 = []
lua51 = []
vendored = ["lua-src"]
serialize = ["serde", "erased-serde"]
default = ["lua54", "vendored", "serialize"]

[dev-dependencies]
tempfile = "3"
trybuild = "1.0"
maplit = "1.0"
criterion = { version = "0.3.4", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "benchmark"
harness = false
required-features = []
