[package]
name = "rollback_mlua"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
lua54 = ["ffi/lua54"]
lua53 = ["ffi/lua53"]
lua52 = ["ffi/lua52"]
lua51 = ["ffi/lua51"]
vendored = ["ffi/vendored"]
serialize = ["serde", "erased-serde", "serde-value"]
default = ["lua54", "vendored", "serialize"]

[dependencies]
bstr = "1"
log = "0.4.17"
num-traits = "0.2.15"
once_cell = "1.13.0"
rustc-hash = "1.1.0"
serde = { version = "1.0", optional = true }
erased-serde = { version = "0.3", optional = true }
serde-value = { version = "0.7", optional = true }
slotmap = "1"
ffi = { package = "mlua-sys", version = "0.3.2" }

[dev-dependencies]
criterion = { version = "0.5", features = [] }
trybuild = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maplit = "1.0"
tempfile = "3"
static_assertions = "1.0"

[[bench]]
name = "benchmark"
harness = false
required-features = []
